# cmake-sfml-template

./: .gitmodules  CMakeLists.txt  notes
src/: CMakeLists.txt  common.hxx  main.cxx
